--- a/EST309.md
+++ b/EST309.md
@@ -6,6 +6,6 @@
 #### Repositorios de Estudiantes
 | Nombre del Estudiante | Enlace al Repositorio |
 |--------------|-----------------|
-| [Nombre del Estudiante] | [Enlace al Repositorio] |
+| [Jefry Erick Quispe Ramos] | [https://github.com/Neutro44/metodos_de_optimizacion] |
 
 ---
